--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -37,6 +37,18 @@
 	
 	<!-- img-responsive from bootstrap lib provides the image with fitting the device screen resolution -->
 	<img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera. ">
+	
+	<!-- Add button with bootstrap: class of btn are only as wide as the text that they contain -->
+	<button class="btn">Like</button>
+	
+	<!-- Add button with bootstrap: Note that these class is required class btn and btn-block
+	btn-block class stretch to fill your page's entire horizontal space and any elements following it will flow onto a "new line" below the block
+	btn-primary class is pre-define blue color button from bootstrap
+	btn-info class is pre-define blue sky color button from bootstrap
+	btn-info class is pre-define red color button from bootstrap	-->
+	<button class="btn btn-block btn-primary">Submit</button>
+	<button class="btn btn-block btn-info">Info</button>
+	<button class="btn btn-block btn-danger">Danger</button>
 
 	<p>Things cats love:</p>
 	<ul>
