--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -35,6 +35,8 @@
   }
 </style>
 
+<!-- Bootstrap row class must be inside container or container-fluid class (full width for all device) 
+	 More infor at https://viblo.asia/Giangnv/posts/BAQ3vVDMbOry -->
 <div class="container-fluid">
 	<!-- Bootstrap uses a responsive grid system which makes it easy to put elements into rows and specify each element's relative width -->
 	<!-- Note that the col-xs-* class is being used: xs means extra small (can change to anther format size as md, ... 
