--- a/jQuerry.html
+++ b/jQuerry.html
@@ -31,6 +31,40 @@
 		
 		<!-- You can also change the non-CSS properties of HTML elements with jQuery. For example, you can disable buttons. When you disable a button, it will become grayed-out and can no longer be clicked. jQuery has a function called .prop() that allows you to adjust the properties of elements. -->
 		$("#target2").prop("disable",true)
+		
+		<!-- Using jQuery, you can change the text between the start and end tags of an element. You can even change HTML markup. jQuery has a function called .html() that lets you add HTML tags and text within an element. Any content previously within the element will be completely replaced with the content you provide using this function -->
+		<!-- jQuery also has a similar function called .text() that only alters text without adding tags. In other words, this function will not evaluate any HTML tags passed to it, but will instead treat it as the text you want to replace the existing content with. -->
+		$("#target4").html("<em>#target4</em>");
+		
+		<!-- jQuery has a function called .remove() that will remove an HTML element entirely -->
+		$("#target4").remove();
+		
+		<!-- jQuery has a function called appendTo() that allows you to select HTML elements and append them to another element. EX: Move your target2 element from your left-well to your right-well -->
+		$("#target2").appendTo("#right-well");
+		
+		<!-- In addition to moving elements, you can also copy them from one place to another. jQuery has a function called clone() that makes a copy of an element. -->
+		<!-- We can also chain many jquery command as below -->
+		$("#target5").clone().appendTo("#left-well");
+		
+		<!-- Target a Parent of an Element using jQuery -->
+		<!-- Every HTML element has a parent element from which it inherits properties. EX, your jQuery Playground h3 element has the parent element of <div class="container-fluid">, which itself has the parent body. jQuery has a function called parent() that allows you to access the parent of whichever element you've selected. Give the parent of the #target1 element a background-color of red -->
+		$("#target1").parent().css("background-color","red");
+		
+		<!-- Target a childrent of an Element using jQuery -->
+		<!-- Many HTML elements have children which inherit their properties from their parent HTML elements. jQuery has a function called children() that allows you to access the children of whichever element you've selected. Give all the children of your #right-well element a color of orange. -->
+		$("#right-well").children().css("color", "orange");
+		
+		<!-- Target a specific child of an Element using jQuery -->
+		<!-- When we do not have attribute to target, jQuery uses CSS Selectors to target elements. target:nth-child(n) css selector allows you to select position n element of all target elements with the target class or element type. Make the second child in each of your well elements bounce. You must target the children of element with the target class -->
+		$(".target:nth-child(2)").addClass("animated bounce");
+		
+		<!-- Target even/odd numbered of an Element using jQuery -->
+		<!-- You can also target all the even-numbered elements. Note that jQuery is zero-indexed, meaning that, counter-intuitively, :odd selects the second element, fourth element, and so on. Try selecting all the even-numbered elements and giving them the classes of animated and shake. -->
+		$(".target:even").addClass("animated shake");
+		
+		<!-- Use jQuery to modify entirely Page: jQuery can target the body element for entirely page. -->
+		$("body").addClass("animated hinge");
+		
 	});
 </script>
 
