--- a/jQuerry.html
+++ b/jQuerry.html
@@ -63,7 +63,7 @@
 		$(".target:even").addClass("animated shake");
 		
 		<!-- Use jQuery to modify entirely Page: jQuery can target the body element for entirely page. -->
-		$("body").addClass("animated hinge");
+		<!-- $("body").addClass("animated hinge");-->
 		
 	});
 </script>
