--- a/Tribute Page.html
+++ b/Tribute Page.html
@@ -8,7 +8,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
-<!-- jQuery/CSS -->
+<!-- Custom CSS -->
+<style>
+	.top-pad {
+		padding-top: 60px;
+	}
+</style>
+
+<!-- jQuery -->
 <script>
 	$(document).ready(function() {
 	});
@@ -16,25 +23,21 @@
 
 
 <body>
-	<div class="container-fluid">
-	  <h3 class="text-primary text-center">jQuery Playground</h3>
-	  <div class="row">
-		<div class="col-xs-6">
-		  <h4>#left-well</h4>
-		  <div class="well" id="left-well">
-			<button class="btn btn-default target" id="target1">#target1</button>
-			<button class="btn btn-default target" id="target2">#target2</button>
-			<button class="btn btn-default target" id="target3">#target3</button>
-		  </div>
+	<div class="container top-pad">
+		<div class="jumbotron">
+			<div class="text-center">
+				<h1>Dr. Alan Turing</h1>
+				<h2>Father of modern computer science</h2>
+			</div>
+			<div class="container">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/a/a1/Alan_Turing_Aged_16.jpg" class="img-responsive center-block" alt="Alan Turing Aged 16">
+				<h5>Alan Turing at age 16</h5>
+			</div>
+			
+			<h3>Test</h3>
+				
 		</div>
-		<div class="col-xs-6">
-		  <h4>#right-well</h4>
-		  <div class="well" id="right-well">
-			<button class="btn btn-default target" id="target4">#target4</button>
-			<button class="btn btn-default target" id="target5">#target5</button>
-			<button class="btn btn-default target" id="target6">#target6</button>
-		  </div>
-		</div>
-	  </div>
+		<hr class="my-1">
+		<h5 class="text-center">Dung Kieu</h5>
 	</div>
 </body>
