--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	}
 	
 	.topnav a {
-		float: right;
+		position:absolute;
+    		left:30%;
 		display: block;
 		color: #f2f2f2;
 		text-align: center;
@@ -35,8 +36,7 @@
 		font-size: 17px;
 	}
 	
-	.topnav a:nth-child(2) {
-		float:left;
+	
 	}
 	
 	.topnav a:hover {
