--- a/Personal Portfolio.html
+++ b/Personal Portfolio.html
@@ -110,15 +110,14 @@
 	<!-- Keep it at always on top of the page by navbar-fixed-top -->
 	<div id="myTopnav" class="topnav navbar-fixed-top">
 		<div="row">
-		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-		<a href="#">Dũng Kiều</a>
-		<div class="floatright">
-		<a href="#about">About Me</a>
-		<a href="#portfolio">Portfolio</a>
-		<a href="#contact">Contact Me</a>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+			<a href="#">Dũng Kiều</a>
+			<div class="floatright">
+				<a href="#about">About Me</a>
+				<a href="#portfolio">Portfolio</a>
+				<a href="#contact">Contact Me</a>
+			</div>
 		</div>
-		</div>
-	</div>
 
 	<div class="container container-border" id="about" style="background-color:gray">
 		<div class="rows">
@@ -129,7 +128,7 @@
 				<br>
 				<h2>What I will learn:</h2>
 				<hr class="my-1">
-				<div class="row">
+				<div class="row img-responsive">
 					<img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_128.png">
 					<img src="http://www.myiconfinder.com/uploads/iconsets/128-128-8b61de4c84033266e15317a6eb9fda2d-css3.png">
 					<img src="http://laminds.com/assets/images/javascript-small.png">
@@ -211,13 +210,13 @@
 			<div class="col-xs-4 col-xs-offset-1">
 				<h3 style="color:white">You can also contact me via social website as below:</h3>
 				<a class="btn btn-block btn-lg btn-social btn-linkedin">
-					<span class="fa fa-linkedin"></span> Contact via Linkedin
+					<span href="#" target="_blank" class="fa fa-linkedin"></span> Contact via Linkedin
 				</a>
 				<a class="btn btn-block btn-lg btn-social btn-github">
-					<span class="fa fa-github"></span> Contact via Github
+					<span href="#" target="_blank" class="fa fa-github"></span> Contact via Github
 				</a>
 				<a class="btn btn-block btn-lg btn-social btn-facebook">
-					<span class="fa fa-facebook"></span> Contact via Facebook
+					<span href="#" target="_blank" class="fa fa-facebook"></span> Contact via Facebook
 				</a>
 				<br>
 			</div>
