--- a/Random Quote Machine.html
+++ b/Random Quote Machine.html
@@ -16,7 +16,7 @@
 // IE support: https://cypressnorth.com/programming/cross-domain-ajax-request-with-json-response-for-iefirefoxchrome-safari-jquery/
 
 	$(document).ready(function() {
-		var qouteAPI = "http://quotesondesign.com/wp-json/posts?filter[orderby]=rand&filter[posts_per_page]=1";
+		var qouteAPI = "https://quotesondesign.com/wp-json/posts?filter[orderby]=rand&filter[posts_per_page]=1";
 		$.ajax ({
 			url: qouteAPI,
 			success: function (data) {
@@ -29,6 +29,7 @@
 			cache: false
 		});
 		
+		// Random background-color
 		function ran_col() { //function name
                 var color = '#'; // hexadecimal starting symbol
                 var letters = ['000000','FF0000','00FF00','0000FF','FFFF00','00FFFF','FF00FF','C0C0C0']; //Set your colors here
@@ -36,7 +37,7 @@
                 document.getElementById('bodyss').style.background = color; // Setting the random color on your div element.
             }
 			
-		
+		// Get new qoute when click button
 		$("#button1").on("click", function () {
 			$.ajax ({
 			url: qouteAPI,
