--- a/TwitchTV JSON API.html
+++ b/TwitchTV JSON API.html
@@ -1,6 +1,6 @@
 
 <head>
-	<title>Wikipedia Viewer</title>
+	<title>TwitchTV JSON API</title>
 	<meta charset="utf-8">
 	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
@@ -14,44 +14,10 @@
 // IE support: https://cypressnorth.com/programming/cross-domain-ajax-request-with-json-response-for-iefirefoxchrome-safari-jquery/
 	
 	$(document).ready(function() {
-		document.getElementById('randomButton').onclick = function () {
-			location.href = "https://en.wikipedia.org/wiki/Special:Random";
-		};
-			
-		document.getElementById('searchButton').onclick = function () {
-			if (document.getElementById('searchForm').value != '') {
-				showWikiData();
-			}
-			else {
-				console.log("Enter something to search");
-			}
-		};
-		
-		$("#searchForm").keypress(function(key) {
-			if (key.keyCode == 13 && document.getElementById('searchForm').value != '') {
-				showWikiData();
-			}
+		var twitchApiUrl = "https://wind-bow.gomix.me/twitch-api/streams/freecodecamp";
+		$.getJSON('https://api.twitch.tv/kraken/streams/freecodecamp?callback=?', function(data) {
+			console.log(data);
 		});
-		
-		// Append data from wiki to div id result
-		function showWikiData() {
-			$("#mainForm").removeClass("centered");
-			$("#searchForm").addClass("afterSearch");
-			$("#buttonForm").hide();
-			$("#result").empty();
-			var wikiSearchURL = "https://crossorigin.me/https://en.wikipedia.org/w/api.php?action=query&list=search&srsearch=" + document.getElementById('searchForm').value + "&prop=info&inprop=url&utf8=&format=json";
-			$.ajax ({
-				url: wikiSearchURL,
-				success: function (data){
-					//console.log(data);
-					for (var i=0 ; i< data.query.search.length ; i++) {
-						var content = "<a href=\"https://en.wikipedia.org/wiki/" + data.query.search[i].title.replace(" ","%20") + "\">" + "<div class=\"well container\"><b>" + data.query.search[i].title + "</b></br>" + data.query.search[i].snippet + " ... </br></div></a>"; 
-						$("#result").append(content);
-					}
-				},
-				cached: false
-			});
-		}
 	});
 </script>
 
@@ -61,55 +27,37 @@
 		color: white;
 	}
 	
-	.centered {
-		position: fixed;
-		top: 50%;
-		left: 50%;
-		/* bring your own prefixes */
-		transform: translate(-50%, -50%);
-	}
 	
-	.afterSearch {
-		margin: 10px auto;
-	}
-	
-	#searchForm {
-		width: 700px;
-	}
-	
-	@media screen and (max-width: 800px) {
-		#searchForm {
-			width: 300px;
-		}
-	}
-		
 </style>	
 	
 <body>
 	<!-- Header -->
 	<div class="container-fluid text-center" id="header">
 		<br>
-		<h1>Wikipedia Search App</h1>
-		<p style="color:white">Homework with <a href="https://www.freecodecamp.com" target="_blank" style="color:white"><span class="fa fa-free-code-camp"></span> FreeCodeCamp.com</a></p>
+		<h1>TwitchTV Stream App</h1>
+		<p>A Homework From <a href="https://www.freecodecamp.com" target="_blank" style="color:white">FreeCodeCamp.com</a></p>
 	</div>
+	</br>
 	
-	<!-- Display Wikipedia -->	
-	<div class="text-center centered" id="mainForm">
-		<!-- Search button -->
-		<div>
-			<input type="text" class="form-control" id="searchForm" placeholder="What do you looking for?">
-			</br>
-		</div>	
-		<!-- Button -->
-		<div class="row" id="buttonForm">
-			<div id="searchButton" class="col-xs-6">
-				<button class="btn btn-info">Search</button>
+	<!-- Display Stream Info-->	
+	<div class="container" id="mainForm">
+		<!-- Status button -->
+		<div class="btn-group btn-group-justified">
+			<a href="#" class="btn btn-info" style="color:black">ALL Channel</a>
+			<a href="#" class="btn btn-success" style="color:black">ONLINE Channel</a>
+			<a href="#" class="btn btn-danger" style="color:black">OFFLINE Channel</a>
+		</div>
+		</br>
+		
+		<!-- Result -->
+	<div class="well" id="result">
+		<div class="row text-center">
+			<div class="col-xs-6">
+				<h2>Channel</h2>
 			</div>
-			<div id="randomButton" class="col-xs-6">
-				<button class="btn btn-info">I am fabulous</button>
+			<div class="col-xs-6">
+				<h2>Status</h2>
 			</div>
 		</div>
-	</div>
-	<div id="result"></div>
+	</div>	
 </body>
- 
