--- a/TwitchTV JSON API.html
+++ b/TwitchTV JSON API.html
@@ -13,11 +13,38 @@
 // To access 3rd API (cross domain access), we can use CORS or JSONP. Recomendation: webserver should support these function first
 // IE support: https://cypressnorth.com/programming/cross-domain-ajax-request-with-json-response-for-iefirefoxchrome-safari-jquery/
 	
-	$(document).ready(function() {
-		var twitchApiUrl = "https://wind-bow.gomix.me/twitch-api/streams/freecodecamp";
-		$.getJSON('https://api.twitch.tv/kraken/streams/freecodecamp?callback=?', function(data) {
+	// List of channel
+	var channels = ['ESL_SC2', 'freecodecamp', 'OgamingSC2'];
+	
+	// Make stream API URL
+	function makeURL(channel) {
+		return 'https://wind-bow.gomix.me/twitch-api/streams/' + channel + '?callback=?';
+	}
+	
+	// Get data from TwitchTV
+	function getTwitchData (streamApi, i) {
+		$.getJSON(streamApi, function (data) {
 			console.log(data);
+			if (data.stream != null) {
+				$('#channel' + i + 'Status').html('<h3 style=\'color:green\'>Online</h3>');
+				// Click on div for more details
+			}
+			else if (data.stream == 'undefine'){
+				$('#channel' + i + 'Status').html('<h3>Channel is deactivated</h3>');
+			}
+			else {
+				$('#channel' + i + 'Status').html('<h3 style=\'color:red\'>Offline</h3>');
+			}
 		});
+	}
+	
+	$(document).ready(function() {
+		// Get all status of stream
+		for (var i=0; i <channels.length; i++) {
+			getTwitchData(makeURL(channels[i]),i);
+		}
+		
+		
 	});
 </script>
 
@@ -26,7 +53,6 @@
 		background-color: #007ec3;
 		color: white;
 	}
-	
 	
 </style>	
 	
@@ -43,21 +69,45 @@
 	<div class="container" id="mainForm">
 		<!-- Status button -->
 		<div class="btn-group btn-group-justified">
-			<a href="#" class="btn btn-info" style="color:black">ALL Channel</a>
-			<a href="#" class="btn btn-success" style="color:black">ONLINE Channel</a>
-			<a href="#" class="btn btn-danger" style="color:black">OFFLINE Channel</a>
+			<a href="#" class="btn btn-info" style="color:black">ALL</a>
+			<a href="#" class="btn btn-success" style="color:black">ONLINE</a>
+			<a href="#" class="btn btn-danger" style="color:black">OFFLINE</a>
 		</div>
+		</br>
 		</br>
 		
 		<!-- Result -->
-	<div class="well" id="result">
-		<div class="row text-center">
-			<div class="col-xs-6">
-				<h2>Channel</h2>
+		<div  id="result">
+			<h2 id='resultText'>All Channel:</h2>
+			<div class="container well row" id="channel0">
+				<div class="col-xs-2">
+					<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/esl_sc2-profile_image-d6db9488cec97125-300x300.jpeg'>
+				</div>
+				<div class='col-xs-4'>
+					<h3><a href="https://www.twitch.tv/ESL_SC2" target='_blank'>ESL_SC2 Channel</a></h3>
+				</div>
+				<div class='col-xs-2 col-xs-offset-3' id='channel0Status'><h3></h3></div>
 			</div>
-			<div class="col-xs-6">
-				<h2>Status</h2>
+			
+			<div class="container well row" id="channel3">
+				<div class="col-xs-2">
+					<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/freecodecamp-profile_image-d9514f2df0962329-300x300.png'>
+				</div>
+				<div class='col-xs-4'>
+					<h3><a href="https://www.twitch.tv/freecodecamp" target='_blank'>Freecodecamp Channel</a></h3>
+				</div>
+				<div class='col-xs-2 col-xs-offset-3' id='channel1Status'></div>
+			</div>
+			
+			<div class="container well row" id="channel3">
+				<div class="col-xs-2">
+					<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/ogamingsc2-profile_image-9021dccf9399929e-300x300.jpeg'>
+				</div>
+				<div class='col-xs-4'>
+					<h3><a href="https://www.twitch.tv/OgamingSC2" target='_blank'>OgamingSC2 Channel</a></h3>
+				</div>
+				<div class='col-xs-2 col-xs-offset-3' id='channel2Status'></div>
 			</div>
 		</div>
-	</div>	
+	</div>
 </body>
