--- a/TwitchTV JSON API.html
+++ b/TwitchTV JSON API.html
@@ -14,8 +14,9 @@
 // IE support: https://cypressnorth.com/programming/cross-domain-ajax-request-with-json-response-for-iefirefoxchrome-safari-jquery/
 	
 	// List of channel
-	var channels = ['ESL_SC2', 'freecodecamp', 'OgamingSC2'];
-	
+	var channels = ['ESL_SC2', 'freecodecamp', 'OgamingSC2', 'brunofin'];
+	var channelStatus = [];
+
 	// Make stream API URL
 	function makeURL(channel) {
 		return 'https://wind-bow.gomix.me/twitch-api/streams/' + channel + '?callback=?';
@@ -27,13 +28,16 @@
 			console.log(data);
 			if (data.stream != null) {
 				$('#channel' + i + 'Status').html('<h3 style=\'color:green\'>Online</h3>');
+				channelStatus[i] = 'Online';
 				// Click on div for more details
 			}
 			else if (data.stream == 'undefine'){
 				$('#channel' + i + 'Status').html('<h3>Channel is deactivated</h3>');
+				channelStatus[i] = 'Undefined';
 			}
 			else {
 				$('#channel' + i + 'Status').html('<h3 style=\'color:red\'>Offline</h3>');
+				channelStatus[i] = 'Offline';
 			}
 		});
 	}
@@ -44,6 +48,38 @@
 			getTwitchData(makeURL(channels[i]),i);
 		}
 		
+		//console.log(channelStatus);
+		
+		// Hide Offline channel when click on Online buttom
+		$('#onlineButton').click(function() {
+			for (var i=0; i<channelStatus.length; i++) {
+				if (channelStatus[i] === 'Online') {
+					$('#channel' + i).show();
+				}
+				else {
+					$('#channel' + i).hide();
+				}
+			}
+		});
+		
+		// Hide Online channel when click on Offline buttom
+		$('#offlineButton').click(function() {
+			for (var i=0; i<channelStatus.length; i++) {
+				if (channelStatus[i] === 'Offline') {
+					$('#channel' + i).show();
+				}
+				else {
+					$('#channel' + i).hide();
+				}
+			}
+		});
+		
+		// Show all channel when click on ALL button
+		$('#allButton').click(function() {
+			for (var i=0; i<channelStatus.length; i++) {
+				$('#channel' + i).show();
+			}
+		});
 		
 	});
 </script>
@@ -68,45 +104,51 @@
 	<!-- Display Stream Info-->	
 	<div class="container" id="mainForm">
 		<!-- Status button -->
-		<div class="btn-group btn-group-justified">
-			<a href="#" class="btn btn-info" style="color:black">ALL</a>
-			<a href="#" class="btn btn-success" style="color:black">ONLINE</a>
-			<a href="#" class="btn btn-danger" style="color:black">OFFLINE</a>
+		<div class="btn-group btn-group-justified" style="color:green">
+			<a class="btn btn-info" id='allButton'>ALL</a>
+			<a class="btn btn-success" id='onlineButton'>ONLINE</a>
+			<a class="btn btn-danger" id='offlineButton'>OFFLINE</a>
 		</div>
 		</br>
 		</br>
 		
 		<!-- Result -->
 		<div  id="result">
-			<h2 id='resultText'>All Channel:</h2>
+			<h2 id='resultText'>Channels:</h2>
 			<div class="container well row" id="channel0">
-				<div class="col-xs-2">
-					<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/esl_sc2-profile_image-d6db9488cec97125-300x300.jpeg'>
-				</div>
-				<div class='col-xs-4'>
-					<h3><a href="https://www.twitch.tv/ESL_SC2" target='_blank'>ESL_SC2 Channel</a></h3>
-				</div>
-				<div class='col-xs-2 col-xs-offset-3' id='channel0Status'><h3></h3></div>
+				<a href="https://www.twitch.tv/ESL_SC2" target='_blank'>
+					<div class="col-xs-2">
+						<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/esl_sc2-profile_image-d6db9488cec97125-300x300.jpeg'>
+					</div>
+					<div class='col-xs-4'>
+						<h3>ESL_SC2 Channel</h3>
+					</div>
+					<div class='col-xs-2 col-xs-offset-3' id='channel0Status'><h3></h3></div>
+				</a>
 			</div>
 			
-			<div class="container well row" id="channel3">
-				<div class="col-xs-2">
-					<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/freecodecamp-profile_image-d9514f2df0962329-300x300.png'>
-				</div>
-				<div class='col-xs-4'>
-					<h3><a href="https://www.twitch.tv/freecodecamp" target='_blank'>Freecodecamp Channel</a></h3>
-				</div>
-				<div class='col-xs-2 col-xs-offset-3' id='channel1Status'></div>
+			<div class="container well row" id="channel1">
+				<a href="https://www.twitch.tv/freecodecamp" target='_blank'>
+					<div class="col-xs-2">
+						<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/freecodecamp-profile_image-d9514f2df0962329-300x300.png'>
+					</div>
+					<div class='col-xs-4'>
+						<h3>Freecodecamp Channel</h3>
+					</div>
+					<div class='col-xs-2 col-xs-offset-3' id='channel1Status'></div>
+				</a>
 			</div>
 			
-			<div class="container well row" id="channel3">
-				<div class="col-xs-2">
-					<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/ogamingsc2-profile_image-9021dccf9399929e-300x300.jpeg'>
-				</div>
-				<div class='col-xs-4'>
-					<h3><a href="https://www.twitch.tv/OgamingSC2" target='_blank'>OgamingSC2 Channel</a></h3>
-				</div>
-				<div class='col-xs-2 col-xs-offset-3' id='channel2Status'></div>
+			<div class="container well row" id="channel2">
+				<a href="https://www.twitch.tv/OgamingSC2" target='_blank'>
+					<div class="col-xs-2">
+						<img class='img-circle' width="64" height="64" src='https://static-cdn.jtvnw.net/jtv_user_pictures/ogamingsc2-profile_image-9021dccf9399929e-300x300.jpeg'>
+					</div>
+					<div class='col-xs-4'>
+						<h3>OgamingSC2 Channel</h3>
+					</div>
+					<div class='col-xs-2 col-xs-offset-3' id='channel2Status'></div>
+				</a>
 			</div>
 		</div>
 	</div>
